--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-flask==2.3.3
-flask-socketio==5.3.6
-eventlet==0.33.3
-gunicorn==21.2.0
-Jinja2
+Flask==3.1.0
+Flask-SocketIO==5.4.1
+eventlet==0.37.0
+gunicorn==23.0.0
+python-socketio==5.12.0
+python-engineio==4.11.0
+setuptools==75.6.0
+wheel==0.45.0
