--- a/render.yaml
+++ b/render.yaml
@@ -16,3 +16,7 @@ services:
         value: false
       - key: SECRET_KEY
         generateValue: true
+      - key: GOOGLE_CLIENT_ID
+        value: 1078000715877-o5migh7kbaiv59n7nndpej08f1t5gkg0.apps.googleusercontent.com
+      - key: GOOGLE_CLIENT_SECRET
+        value: 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
