--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "A multi-user music streaming application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "NODE_ENV=production node server.js",
+    "dev": "nodemon server.js",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop musicroom",
+    "pm2:restart": "pm2 restart musicroom",
+    "pm2:delete": "pm2 delete musicroom",
+    "logs": "pm2 logs musicroom"
   },
   "keywords": [
     "music",
@@ -17,10 +22,16 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.11.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
+    "pm2": "^5.3.0",
     "socket.io": "^4.7.5",
+    "winston": "^3.11.0",
     "youtube-search-api": "^2.0.1",
     "ytdl-core": "^4.11.5"
   },
